--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a:hover {
 
 .meta {
 	font-family: ff-meta-serif-web-pro,serif;
-	font-weight: 300;
+	font-weight: 800;
 	font-style: normal;
 	color: #383838;
 	font-size: 5vh;
@@ -28,7 +28,16 @@ a:hover {
 
 .meta-2 {
 	font-family: ff-meta-serif-web-pro,serif;
-	font-weight: 300;
+	font-weight: 800;
+	font-style: normal;
+	color: #383838;
+	font-size: 5vh;
+	line-height: 8vh;
+}
+
+.meta-3 {
+	font-family: ff-meta-serif-web-pro,serif;
+	font-weight: 800;
 	font-style: normal;
 	color: #383838;
 	font-size: 5vh;
@@ -43,6 +52,15 @@ a:hover {
 	clear: both;
 }
 
+.helvetica-2 {
+	font-size: 11px;
+	line-height: 10px;
+	width: 77.5vw;
+	word-wrap: break-word;
+	clear: both;
+	font-weight: bold;
+}
+
 .intro-page {
 	float: left;
 	margin-left: 10vw;
@@ -50,7 +68,14 @@ a:hover {
 }
 
 .myStory {
-	font-size: 3.4vh;
+	font-size: 3vh;
+	line-height: 4.3vh;
+	font-weight: 500;
+	width: 70%;
+}
+
+.myStory-span {
+	font-weight: 600;
 }
 
 .myStoryContent {
@@ -88,10 +113,26 @@ a:hover {
 
 .names {
 	position: absolute;
-	width: 100px;
+	/*width: 100px;*/
 	height: 100px;
 	font-size: 5vw;
+	text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
+	color: #f9f9f9;
+	transition: 1s;
 }
+
+/*.names:hover {
+	color: #383838;
+	text-shadow: 
+		-1px -1px 0 #f9f9f9,
+		1px -1px 0 #f9f9f9,
+		-1px 1px 0 #f9f9f9,
+		1px 1px 0 #f9f9f9;
+}*/
 
 .s-name {
 	font-size: 1vw;
@@ -111,6 +152,15 @@ a:hover {
 
 .l-name {
 	font-size: 5vw;
+	height: 17vh;
+	transition: 0.8s;
+}
+
+.l-name:hover {
+	/*height: 20vh;*/
+	transform: scale(1.1);
+	transform-origin: center;
+
 }
 
 .page {
@@ -123,13 +173,22 @@ a:hover {
 .docScroller {
 	overflow-x: hidden;
 	position: absolute;
-	top: 0;
 	width: 100%;
 	height: 100%;
 	overflow: auto;
 	scroll-snap-points-y: repeat(100%);
 	scroll-snap-type: mandatory;
 	scroll-snap-destination: 100% 0%;
+}
+
+.tony {
+	top: 0;
+	left: 0;
+}
+
+.onyou {
+	top: 0;
+	left: 0;
 }
 
 .header {
@@ -176,6 +235,19 @@ a:hover {
 ::placeholder { 
 	color: #383838;
 	opacity: 1;
+}
+
+.searchBox {
+	font-size: 11px;
+	line-height: 10px;
+	padding: 9px 20px;
+	color: #383838;
+	font-weight: bold;
+	height: none;
+}
+
+input:focus {
+    outline:none;
 }
 
 .logo-resize {
@@ -286,10 +358,9 @@ a:hover {
 }
 
 .yesNo {
-	font-size: 5vh;
+	padding-bottom: 2vh;
 	float: left;
-	padding-left: 1.5vw;
-	padding-right: 4vw;
+	width: 20%;
 }
 
 .questions {
@@ -298,6 +369,34 @@ a:hover {
 
 .response {
 	margin-bottom: 5vh;
+}
+
+.response-input {
+	width: 47%;
+	box-sizing: border-box;
+	border: none;
+	border-bottom: 3px solid #383838;
+	margin-bottom: 5vh;
+	background-color: #f9f9f9;
+	border-spacing: 15vh;
+}
+
+.response-input-long {
+	width: 69%;
+	box-sizing: border-box;
+	border: none;
+	border-bottom: 3px solid #383838;
+	margin-bottom: 5vh;
+	background-color: #f9f9f9;
+}
+
+.response-input-other {
+	width: 31%;
+	box-sizing: border-box;
+	border: none;
+	border-bottom: 3px solid #383838;
+	margin-bottom: 5vh;
+	background-color: #f9f9f9;
 }
 
 .byWho {
@@ -317,4 +416,98 @@ a:hover {
 
 .submitButton:hover {
 	background-color: lightgray;
+}
+
+
+
+/* The container */
+.container {
+	display: block;
+	position: relative;
+	padding-left: 50px;
+	margin-right: 12px;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  height: 4vh;
+  width: 4vh;
+  /*background-color: #eee;*/
+  border-radius: 0%;
+  border: 2px solid #383838;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #efefef;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #f9f9f9;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+ 	top: 1vh;
+	left: 1vh;
+	width: 1.5vh;
+	height: 1.5vh;
+	border-radius: 0%;
+	background: #383838;
+}
+
+
+body {
+    opacity: 0;
+}
+
+#result {
+	position: absolute;
+	width: 20vw;
+	max-width:870px;
+	cursor: pointer;
+	overflow-y: auto;
+	max-height: 400px;
+	box-sizing: border-box;
+	z-index: 1001;
+}
+
+.link-class {
+	transition: 0.5s;
+}
+
+.link-class:hover{
+	background-color:#f1f1f1;
+}
+
+.active {
+	display: none;
 }
