--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ a:hover {
 
 .s-name {
 	font-size: 1vw;
-	height: 1vh;
+	height: 3vh;
 	transition: 0.8s;
 }
 
@@ -184,7 +184,7 @@ a:hover {
 
 .l-name {
 	font-size: 5vw;
-	height: 17vh;
+	height: 16vh;
 	transition: 0.8s;
 }
 
@@ -274,6 +274,7 @@ input:focus {
 
 .logo-resize {
 	width: 15vw;
+	padding-right: 1vw;
 }
 
 .content {
@@ -308,7 +309,7 @@ input:focus {
 	font-size: 5vh;
 	padding: 1.5vh;
 	border: 2px #383838 solid;
-	width: 19vw;
+	width: 21vw;
 	border-radius: 5px;
 	transition: background-color 1s;
 }
@@ -486,4 +487,13 @@ body {
 
 .active {
 	display: none;
+}
+
+.img-thumbnail {
+	border: none;
+	padding: 0;
+}
+
+li:hover {
+	color: black;
 }
