--- a/css/nick.css
+++ b/css/nick.css
@@ -24,25 +24,19 @@
 .one {
 	position: absolute;
 	top: 0px;
-	left: 270px;
-}
-
-.zero {
-	position: absolute;
-	top: 0px;
-	left: 970px;
+	left: 265px;
 }
 
 .two {
 	position: absolute;
-	top: 62px;
-	left: 5px;
+	top: 0px;
+	left: 870px;
 }
 
 .three {
 	position: absolute;
-	top: 141px;
-	left: 338px;
+	top: 61px;
+	left: 5px;
 }
 
 .four {
@@ -54,7 +48,7 @@
 .five {
 	position: absolute;
 	top: 0px;
-	left: 565px;
+	left: 516px;
 }
 
 .six {
@@ -71,14 +65,50 @@
 
 .eight {
 	position: absolute;
-	top: 0px;
-	left: 1022px;
+	top: 62px;
+	left: 5px;
+}
+
+.ten {
+	position: absolute;
+	top: 61px;
+	left: 5px;
+}
+
+.eleven {
+	position: absolute;
+	top: 122px;
+	left: 5px;
+}
+
+.twelve {
+	position: absolute;
+	top: 217px;
+	left: 5px;
+}
+
+.thirteen {
+	position: absolute;
+	top: 281px;
+	left: 301px;
+}
+
+.fourteen {
+	position: absolute;
+	top: 140px;
+	left: 825px;
+}
+
+.fifteen {
+	position: absolute;
+	top: 201px;
+	left: 5px;
 }
 
 .circle {
 	position: absolute;
 	width: 154px;
-	top: 147px;
+	top: 146px;
 	left: 219px;
 }
 
@@ -86,16 +116,4 @@
 	position: absolute;
 	top: 122px;
 	left: 5px;
-}
-
-.ten {
-	position: absolute;
-	top: 219px;
-	left: 5px;
-}
-
-.eleven {
-	position: absolute;
-	top: 219px;
-	left: 255px;
 }
