--- a/css/style.css
+++ b/css/style.css
@@ -852,7 +852,7 @@ li:hover {
 
   .myStory {
   	width: 80vw;
-  	font-size: 2vh;
+  	font-size: 16px;
 	line-height: 3.3vh;
 	font-weight: 500;
   }
