--- a/css/style.css
+++ b/css/style.css
@@ -853,7 +853,7 @@ li:hover {
   .myStory {
   	width: 80vw;
   	font-size: 16px;
-	line-height: 3.3vh;
+	line-height: 26.8px;
 	font-weight: 500;
   }
 
