--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ a:hover {
 	position: relative;
 	float: right;
 	font-size: 13px;
-	margin-top: 10px;
+	margin-top: 18px;
 	margin-right: 1vw;
 }
 
@@ -290,6 +290,11 @@ a:hover {
 
 input:focus {
     outline:none;
+}
+
+.form-control:focus {
+	border-color: #ced4da;
+	box-shadow: none;
 }
 
 .logo-resize {
